<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/background_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/highscorelabel"/>

    <TextView
        android:text="@string/noEasyHighscore"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uiEasyTextView"/>

    <TextView
        android:text="@string/noMediumHighscore"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uiMediumTextView"/>

    <TextView
        android:text="@string/noHardHighscore"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uiHardTextView"/>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="mainActivityClick"
        android:text="@string/returnhome" />
</RelativeLayout>


</LinearLayout>